--- a/overlay/frameworks/base/packages/SettingsProvider/res/values/defaults.xml
+++ b/overlay/frameworks/base/packages/SettingsProvider/res/values/defaults.xml
@@ -35,8 +35,8 @@
            ROTATION_0_MODE: 1
            ROTATION_90_MODE: 2
            ROTATION_180_MODE: 4
-           ROTATION_270_MODE: 8 -->
-    <integer name="def_accelerometer_rotation_angles">15</integer>
+           ROTATION_270_MODE: 8 
+    <integer name="def_accelerometer_rotation_angles">15</integer> -->
 
     <string name="def_airplane_mode_radios" translatable="false">cell,bluetooth,wifi,nfc,wimax,ant</string>
     <string name="airplane_mode_toggleable_radios" translatable="false">bluetooth,wifi,nfc,ant</string>
