--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -229,7 +229,7 @@
             64 - Volume rocker
          For example, a device with Home, Back and Menu keys would set this
          config to 7.
-    On Samsung SM-P600/P601 following keys: 1(Home) + 2(Back) + 4(Menu) + 64(Volume) = 71 
+     On Samsung SM-P600/P601 following keys: 1(Home) + 2(Back) + 4(Menu) + 64(Volume) = 71 -
     <integer name="config_deviceHardwareKeys">67</integer> -->
     <!-- integer name="config_deviceHardwareKeys">71</integer -->
 
