--- a/overlay/frameworks/base/core/res/res/values/cm_arrays.xml
+++ b/overlay/frameworks/base/core/res/res/values/cm_arrays.xml
@@ -24,11 +24,11 @@
     </array> -->
 
     <!-- Do not translate. Defines the shutdown actions passed to the kernel.
-         The first item should be empty for regular reboot. -->
+         The first item should be empty for regular reboot. 
     <string-array name="shutdown_reboot_actions" translatable="false">
         <item></item>
         <item>soft_reboot</item>
         <item>recovery</item>
         <item>download</item>
-     </string-array>
+     </string-array> -->
 </resources>
